# ModernCppChallenge

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  build_and_run_tests.bat  test.cpp
Cryptography/: caesar_cipher.cpp  caesar_cipher.h
StringsAndRegex/: LicensePlates.cpp  LicensePlates.h  license_plates.cpp  license_plates.h
src/Cryptography/: validating_user_credentials.cpp  validating_user_credentials.h
src/StringsAndRegex/: article_title_capitaliser.cpp  article_title_capitaliser.h  joining_strings.cpp  joining_strings.h  license_plates.cpp
test/Cryptography/: caesar_cipher_test.cpp  validating_user_credentials_tests.cpp
test/StringsAndRegex/: article_title_capitaliser_test.cpp  joining_strings_test.cpp  license_plates_test.cpp
